Fix textbox overflow

--- a/src/forms/text.sass
+++ b/src/forms/text.sass
@@ -13,6 +13,7 @@ input.qbo-text
   font-size: 14px
   font-weight: 400
   font-family: $normal-font-families
+  box-sizing: border-box
   &:disabled
     background: #eee
     color: #666
